<resources>
    <string name="app_name">MyGame</string>
    <string name="za_a_hru">\n</string>
    <string name="sk_re" />
    <string name="play">PLAY</string>
    <string name="points">POINTS</string>
    <string name="points_details">Points earned in game.</string>
    <string name="textview">TextView</string>
    <string name="api">API</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up1">Sign Up</string>
    <string name="already_an_user_login">Already an user? Log in.</string>
    <string name="login">Log in</string>
    <string name="new_here_sign_up">New here? Sign up.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_google">Sign in with Google.</string>
    <string name="break_it">Break it</string>
    <string name="title">title</string>
    <string name="id">id</string>
    <string name="body">body</string>
    <string name="user_id">user_id</string>
    <string name="upload_data">Upload Data</string>
    <string name="enter_topic_name">Enter topic name</string>
    <string name="save">Save</string>
    <string name="storage">STORAGE</string>
    <string name="loading">Loading</string>
    <string name="todo">TODO</string>
    <string name="upload_image">Upload Image</string>

</resources>