<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bacg"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="#cbfaf1"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="#8c52ff"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:padding="5dp"
                android:textColor="#8c52ff"/>

            <EditText
                android:id="@+id/password_signup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:padding="5dp"
                android:textColor="#8c52ff"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/sign_up1"
                android:id="@+id/button_signup"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="210dp"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/to_login"
                android:text="@string/already_an_user_login"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:textColor="#8c52ff"
                android:textSize="12sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>