<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bacg"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@color/box"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:padding="5dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:background="@drawable/edit_text_bcg"/>

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:padding="5dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:background="@drawable/edit_text_bcg"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/login"
                android:id="@+id/button_login"
                android:textSize="14sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="210dp"
                app:cornerRadius ="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/to_signup"
                android:text="@string/new_here_sign_up"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/text"
                android:textSize="12sp"/>

            <com.developer.gbuttons.GoogleSignInButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_google"
                android:id="@+id/button_google"
                app:isDarkTheme = "true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:padding="5dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>