<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bacg"
    tools:context=".Upload">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:background="@drawable/background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/text"/>

            <ImageView
                android:id="@+id/upload_img"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="150dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/upload"
                android:contentDescription="@string/todo" />

            <Button
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="right"
                android:text="@string/save"
                android:id="@+id/button_save_up"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>